# yawningface

./: .env.example  .gitignore  LICENSE  README.md  VISION.md  package-lock.json  package.json  tsconfig.base.json
.claude/skills/claude-autonomous-iphone-development/: SKILL.md
.github/workflows/: desktop-cache-warm.yml  desktop-macos-ci.yml  desktop-release.yml  ios.yml
apps/android/: README.md
apps/beacon/: DISCOVERIES.md  README.md
apps/chromebook/: README.md
apps/cli/: README.md  package.json
apps/cloud/: .gitignore  README.md  package-lock.json  package.json
apps/desktop/: .gitignore  LICENSE  README.md  dev.ps1  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: auth.rs  browser_extensions.rs  lib.rs  main.rs  native_messaging.rs  schedule.rs  settings.rs  state.rs  stats.rs  sync.rs  tray.rs
apps/desktop/src-tauri/src/blocking/: apps.rs  hosts.rs  lock.rs  mod.rs  platform.rs
apps/extension/: INSTALL.md  README.md  SPEC.md  build.mjs  package.json  tsconfig.json
apps/iphone/: .gitignore  PORT_NOTES.md  README.md  add-beacon-location-keys.rb  add-enforcement-file.rb  add-shield-targets.rb  deploy.sh  documentation.md
apps/linux/: README.md
docs/: ARCHITECTURE.md  COMPETITORS.md  PRODUCT.md  ROADMAP.md  STYLE_GUIDE.md  product-questions.md
product/: multi-device-persona.md  tough-block-persona.md
product/documentation/: beacon.md
(+97 files in other folders)
