[package]
name = "yfblock"
version = "0.2.7"
description = "YawningFace Block - cross-device distraction blocker (desktop)"
authors = ["Yawningface"]
license = "MIT"
edition = "2021"

[lib]
name = "yfblock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time", "macros"] }
chrono = "0.4"
sysinfo = "0.33"
base64 = "0.22"

[profile.release]
strip = true
lto = true
codegen-units = 1
